# bt2-ftrace-to-ctf

./: .clang-tidy  .gitignore  Doxyfile  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  docu.yml
docs/: Doxyfile  meson.build
man/: ftrace-to-ctf.1.in
scripts/: coverage.sh  induction_test.sh
src/: bt-ftrace-logging.h  bt-ftrace-lttng-events.c  bt-ftrace-lttng-events.h  bt-ftrace-source-query.c  bt-ftrace-source-query.h  bt-ftrace-source.c  bt-ftrace-source.h  bt-ftrace-sym-field.c  bt-ftrace-sym-field.h  bt-ftrace-tracemeta.c  bt-ftrace-utils.h  config.h.in  ftrace-to-ctf.c
tests/: conftest.py  meson.build  test.py  test_bt-ftrace-lttng-events.c  test_bt-ftrace-sym-field.c  test_bt-ftrace-utils.c
