# SPDX-FileCopyrightText: (C) 2025 Siemens AG
# SPDX-License-Identifier: MIT
option('tracecmd-internals',
       description: 'Enable code that depends on private libtracecmd symbols',
       type: 'boolean',
       value: false)
option('tests',
       description: 'Build with CMocka unit tests',
       type: 'feature',
       value: 'auto')
